fix: side-icon; main overflow-y; favicon

--- a/public/index.css
+++ b/public/index.css
@@ -279,7 +279,8 @@ li span input:checked ~ span {
 }
 .off-canvas .off-canvas-content {
   padding: 0rem !important;
-  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 .scroll-to-top-button {
   position: fixed;
